# users_crud_drf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
config/: settings.py  urls.py
